Post, Image domain Development
# Conflicts:
#	src/main/resources/application.yml