@@ -5,9 +5,10 @@ import com.example.MyBlog.domain.filter.JwtFilter;
 import com.example.MyBlog.domain.filter.LoginFilter;
 import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -20,6 +21,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 public class SecurityConfig {
@@ -27,6 +29,11 @@ public class SecurityConfig {
     private final AuthenticationConfiguration authenticationConfiguration;
     private final JwtUtil jwtUtil;
 
+    @Value("${app.server-url}")
+    private String serverUrl;
+
+    @Value("${app.client-url}")
+    private String clientUrl;
 
     @Autowired
     public SecurityConfig(AuthenticationConfiguration authenticationConfiguration, JwtUtil jwtUtil) {
@@ -47,10 +54,10 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        // 필터를 커스텀한 LoginFilter에서 기본 로그인 경로를 "/api/auth/login"으로 변경
+        // 필터를 커스텀한 LoginFilter에서 '기본 로그인 요청 경로'를 "/api/auth/login"으로 변경
         LoginFilter loginFilter = new LoginFilter(authenticationManager(authenticationConfiguration), jwtUtil);
         loginFilter.setFilterProcessesUrl("/api/auth/login");
-        String serverUrl = "http://localhost:61314";
+
 
         // HttpSecurity 설정
         // 커스텀필터는 오버라이딩되지 않는다. 커스텀된것이 원본필터보다 직전에 실행될 뿐이다.
@@ -64,7 +71,7 @@ public class SecurityConfig {
                         // 허용할 출처(Origin)를 설정합니다. 여기서는 "http://localhost:61314"만 허용됩니다.
                         // 즉, 이 도메인에서 오는 요청만을 처리합니다.
                         // Collections.singletonList() == 단 하나의 요소만 가지는 불변(final) 리스트 생성
-                        config.setAllowedOrigins(Collections.singletonList(serverUrl));
+                        config.setAllowedOrigins(Collections.singletonList(clientUrl));
 
                         // 허용할 HTTP 메서드를 설정합니다. "*"는 모든 HTTP 메서드(GET, POST, PUT, DELETE 등)를 허용합니다.
                         config.setAllowedMethods(Collections.singletonList("*"));
@@ -83,21 +90,22 @@ public class SecurityConfig {
 
                         // CORS 응답에서 노출될 헤더를 설정합니다. 클라이언트에서 `Authorization`, 'Refresh' 헤더에 접근할 수 있도록 허용합니다.
                         // 예를 들어, 인증 토큰 등을 클라이언트에서 읽어야 할 때 유용합니다.
-                        config.setExposedHeaders(Collections.singletonList("Authorization"));
-                        config.setExposedHeaders(Collections.singletonList("Refresh"));
+                        // List를 인자로 받는다.
+                        config.setExposedHeaders(List.of("Authorization", "Refresh"));
                         return config;
                     }
                 }))
                 .authorizeHttpRequests((auth) ->
-                        auth.requestMatchers("/api/auth/**").permitAll() // 인증을 요청하는 api는 허용
-                                .requestMatchers("/", "/login","/join").permitAll() // 권한 없어도 정적 페이지 승인
+                        auth.requestMatchers(HttpMethod.GET, "/**").permitAll() // 모든 GET 요청(조회)은 인증 및 인가 없이 가능
+                                .requestMatchers("/api/auth/**").permitAll() // 인증을 요청하는 api 및 회원가입, 로그인 페이지는 무인가 접근 허용
+                                .requestMatchers("/api/admin/**").hasRole("ADMIN") // admin 관련 페이지와 api 요청은 ADMIN만 가능
                                 .anyRequest().authenticated())
-                .formLogin(AbstractHttpConfigurer::disable)
-                .logout(AbstractHttpConfigurer::disable)
-                .httpBasic(AbstractHttpConfigurer::disable)
-                .addFilterBefore(new JwtFilter(jwtUtil), LoginFilter.class) // LoginFilter 앞에 JwtFilter를 위치시킨다.
-                .addFilterAt(loginFilter, UsernamePasswordAuthenticationFilter.class) // 두번째 인자의 필터 순서에 LoginFilter를 추가한다.(바로 앞에 삽입된다)
-                .sessionManagement((session) ->
+                    .formLogin(AbstractHttpConfigurer::disable)
+                    .logout(AbstractHttpConfigurer::disable)
+                    .httpBasic(AbstractHttpConfigurer::disable)
+                    .addFilterBefore(new JwtFilter(jwtUtil), LoginFilter.class) // LoginFilter 앞에 JwtFilter를 위치시킨다.
+                    .addFilterAt(loginFilter, UsernamePasswordAuthenticationFilter.class) // 두번째 인자의 필터 순서에 LoginFilter를 추가한다.(바로 앞에 삽입된다)
+                    .sessionManagement((session) ->
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)); // JWT 인증방식을 위해 STATELESS 설정 (세션 미사용)
         return http.build();
     }
